--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Floating Cards</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main>
         <section>
-            
+            <!-- inizio titolo e testo -->
+            <div class="pres">
+                <h1>Meet Our Team</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi culpa delectus laboriosam quasi voluptates perferendis id omnis veritatis, labore corporis suscipit eum quod officiis aperiam officia illum consequuntur in repellendus.</p>
+            </div>
+            <!-- fine titolo e testo -->
+
         </section>
     </main>
     
