--- a/index.html
+++ b/index.html
@@ -22,6 +22,59 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi culpa delectus laboriosam quasi voluptates perferendis id omnis veritatis, labore corporis suscipit eum quod officiis aperiam officia illum consequuntur in repellendus.</p>
             </div>
             <!-- fine titolo e testo -->
+            <!-- inizio presentazione team -->
+            <div class=" container clearfix">
+        
+                <div class="box">
+                    <img src="img/male1.png" alt="foto marco bianchi">
+                    <h4>MARCO BIANCHI</h2>
+                    <p>Desinger</p>
+                    <small>marcobianchi@team.com</small>
+
+                </div>
+
+                <div class="box">
+                    <img src="img/female1.png" alt="foto laura rossi">
+                    <h4>LAURA ROSSI</h2>
+                    <p>Front-end Developer</p>
+                    <small>laurarossi@team.com</small>
+
+                </div>
+
+                <div class="box">
+                    <img src="img/male2.png" alt="foto giorgio verdi">
+                    <h4>GIORGIO VERDI</h2>
+                    <p>Back-end Devrloper</p>
+                    <small>giorgioverdi@team.com</small>
+
+                </div>
+
+                <div class="box">
+                    <img src="img/female2.png" alt="foto marta ipsum">
+                    <h4>MARTA IPSUM</h2>
+                    <p>SEO Specialist</p>
+                    <small>martaipsum@team.com</small>
+
+                </div>
+
+                <div class="box">
+                    <img src="img/male3.png" alt="foto roberto lorem">
+                    <h4>ROBERTO LOREM</h2>
+                    <p>Project Manager</p>
+                    <small>robertolorem@team.com</small>
+
+                </div>
+
+                <div class="box">
+                    <img src="img/female3.png" alt="foto daniela amet">
+                    <h4>DANIELA AMET</h2>
+                    <p>Analyst</p>
+                    <small>danielaamet@team.com</small>
+
+                </div>
+                
+            </div>
+            <!-- fine presentazione team -->
 
         </section>
     </main>
